Tweak overflow on gear list for background float fix

--- a/css/style.css
+++ b/css/style.css
@@ -1272,6 +1272,7 @@ canvas#gear-list-link {
 	width: 1000px;
 	margin: 0 auto;
 	font-size: 16px;
+	overflow: auto;
 }
 
 .column {
